--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
+    "react-toastify": "^9.1.3",
+    "sass": "^1.66.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
