--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,8 +2,10 @@ FROM node:20-alpine
 
 WORKDIR /usr/local/analyzer
 
-COPY ./src .
+COPY ./src/package.json .
 
 RUN npm install
+
+COPY ./src .
 
 RUN npm run build 
