--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -11,8 +11,12 @@ server {
     access_log /var/logs/nginx/backend/nginx-access.log;
     error_log /var/logs/nginx/backend/nginx-error.log;
 
-
     location / {
+        root /dist;
+        index index.html;
+    }
+
+    location /api {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
         proxy_redirect off;
