--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -23,4 +23,11 @@ server {
 
         proxy_pass http://app_server;
     }
+    location /docs {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+
+        proxy_pass http://app_server;
+    }
 }
