Fix docker compose file

--- a/.env.dev
+++ b/.env.dev
@@ -4,4 +4,4 @@ POSTGRES_HOST=db
 POSTGRES_DB=cbr
 POSTGRES_PORT=5432
 
-VITE_API_URL=http://localhost:80
+VITE_API_URL=your_public_host_with_protocol
