--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,6 +48,8 @@ services:
     build:
       context: .
       dockerfile: ./docker/nginx/nginx.dockerfile
+      args:
+        VITE_API_URL: ${VITE_API_URL}
     restart: unless-stopped
     depends_on:
       - backend
